# focuscue

./: .gitignore  CLAUDE.md  DEPLOYMENT.md  README.md  TODO_MONETIZATION.md  bug_tracker.md  deployment_status.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: ControlsPanel.tsx  FocalDot.tsx  LandingPage.tsx  OverlayTimer.tsx  Teleprompter.tsx
src/lib/: obsParams.ts  tauri.ts  timing.ts  version.ts
src/pages/: OverlayRoute.tsx
website/: index.html  nginx-focuscue.conf  privacy.html  terms.html
