[package]
name = "focuscue-app"
version = "0.0.0"
description = "FocusCue - Presenter Overlay with Timer and Teleprompter"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.8.1", features = ["tray-icon", "image-png"] }
tauri-plugin-window-state = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0" 
tauri-plugin-fs = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = []
